<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvGreeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnChangeLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnAiTranslate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ai_translate"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTranslatedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translated_text_label"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnChangeLanguage"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTranslated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvTranslatedLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
